src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Sexual_Orientation__c</fullName>
        <label>Sexual Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Straight/Heterosexual</fullName>
                </value>
                <value>
                    <fullName>Gay</fullName>
                </value>
                <value>
                    <fullName>Lesbian</fullName>
                </value>
                <value>
                    <fullName>Bisexual</fullName>
                </value>
                <value>
                    <fullName>Questioning/Unsure</fullName>
                </value>
                <value>
                    <fullName>Not listed</fullName>
                </value>
                <value>
                    <fullName>Decline to state</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <inlineHelpText>Use format xxx-xx-xxxx</inlineHelpText>
        <label>Social Security Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number__c</fullName>
        <label>Street Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Type__c</fullName>
        <label>Street Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Not Applicable]</fullName>
                </value>
                <value>
                    <fullName>Alley</fullName>
                </value>
                <value>
                    <fullName>Avenue</fullName>
                </value>
                <value>
                    <fullName>Boulevard</fullName>
                </value>
                <value>
                    <fullName>Circle</fullName>
                </value>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>Drive</fullName>
                </value>
                <value>
                    <fullName>Highway</fullName>
                </value>
                <value>
                    <fullName>Lane</fullName>
                </value>
                <value>
                    <fullName>Loop</fullName>
                </value>
                <value>
                    <fullName>Park</fullName>
                </value>
                <value>
                    <fullName>Place</fullName>
                </value>
                <value>
                    <fullName>Plaza</fullName>
                </value>
                <value>
                    <fullName>Road</fullName>
                </value>
                <value>
                    <fullName>Row</fullName>
                </value>
                <value>
                    <fullName>Square</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>Terrace</fullName>
                </value>
                <value>
                    <fullName>Walk</fullName>
                </value>
                <value>
                    <fullName>Way</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webapp_Id__c</fullName>
        <externalId>true</externalId>
        <label>Webapp Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_City__c</fullName>
        <description>City of Work of the Contact</description>
        <inlineHelpText>City of Work of the Contact</inlineHelpText>
        <label>Work City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Postal_Code__c</fullName>
        <description>Work Postal Code for the Contact</description>
        <inlineHelpText>Work Postal Code for the Contact</inlineHelpText>
        <label>Work Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_State__c</fullName>
        <description>State of Work for the Contact</description>
        <inlineHelpText>State of Work for the Contact</inlineHelpText>
        <label>Work State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Street__c</fullName>
        <description>Work street Address</description>
        <inlineHelpText>Work street Address</inlineHelpText>
        <label>Work Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_in_SF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work in SF?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isHousehold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isHousehold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>isHousehold__c</columns>
        <columns>Is_Developer__c</columns>
        <columns>Is_Property_Manager__c</columns>
        <columns>Is_Real_Estate_Agent__c</columns>
        <columns>Is_Rental_Sales_Agent__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>For_Sony_and_Ruth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Lending_Agent</value>
        </filters>
        <label>For Sony and Ruth</label>
    </listViews>
    <listViews>
        <fullName>Lender_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Lending_Agent</value>
        </filters>
        <label>Lender Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Applicant</fullName>
        <active>true</active>
        <description>Applicants for multi-family and/or BMR housing.</description>
        <label>Applicant</label>
    </recordTypes>
    <recordTypes>
        <fullName>City_and_Partners</fullName>
        <active>true</active>
        <description>MOHCD staff, city staff, and partners.</description>
        <label>City and Partners</label>
    </recordTypes>
    <recordTypes>
        <fullName>Head_of_Household</fullName>
        <active>true</active>
        <description>Person who submitted application</description>
        <label>Head of Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household</fullName>
        <active>true</active>
        <description>General Household member</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lending_Agent</fullName>
        <active>true</active>
        <description>Leasing Administrators, Developers, etc.</description>
        <label>Lending Agent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Property_Agent</fullName>
        <active>true</active>
        <description>Property Contact (Developer, Property Manager, Rental/Sales Agent, Real Estate Agent)</description>
        <label>Property Agent</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cant_Have_more_than_1_Head_of_Household</fullName>
        <active>false</active>
        <errorConditionFormula>Number_of_Head_of_Households__c &gt; 0</errorConditionFormula>
        <errorDisplayField>Head_of_Household2__c</errorDisplayField>
        <errorMessage>You cannot assign this person as Head of Household since one already exists.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_Box_Address_Required</fullName>
        <active>true</active>
        <description>When a user selects &quot;PO Box&quot; as the best way to reach them from the Best Way to Reach You picklist, they must enter a PO Box Address before saving the record.</description>
        <errorConditionFormula>AND( ISPICKVAL( Best_Way_to_Reach_You__c , &quot;PO Box&quot; ) , ISBLANK( PO_Box_Address__c ) )</errorConditionFormula>
        <errorMessage>If you select PO Box as the best method of reaching you, you must enter a value in the PO Box Address field before saving the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Relationship_to_HH_Other_Needs_Details</fullName>
        <active>true</active>
        <description>If &quot;Other&quot; is selected for Relation to Head of Household, please enter the relationship description</description>
        <errorConditionFormula>AND(
ISPICKVAL(Relationship_to_Head_of_Household__c,&quot;Other&quot;),
ISBLANK(Relationship_to_Head_of_HH_if_Other__c)
)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>If &quot;Other&quot; is selected for Relation to Head of Household, please enter the relationship description</errorMessage>
    </validationRules>
</CustomObject>